ilk yarı kararlı yazılım

--- a/Özdevinimci/Özdevinimci.csproj
+++ b/Özdevinimci/Özdevinimci.csproj
@@ -37,9 +37,13 @@
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\mavi.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +61,43 @@
     <Compile Include="AnaEkran.Designer.cs">
       <DependentUpon>AnaEkran.cs</DependentUpon>
     </Compile>
+    <Compile Include="HazirKod_Cdiyez\ArkaPlan.cs" />
+    <Compile Include="HazirKod_Cdiyez\Ayarlar.cs" />
+    <Compile Include="HazirKod_Cdiyez\Ayarlar_Xml.cs" />
+    <Compile Include="HazirKod_Cdiyez\Degiskenler.cs" />
+    <Compile Include="HazirKod_Cdiyez\Deneysel.cs" />
+    <Compile Include="HazirKod_Cdiyez\Depo.cs" />
+    <Compile Include="HazirKod_Cdiyez\DonanımHaberleşmesi.cs" />
+    <Compile Include="HazirKod_Cdiyez\DonanımHaberleşmesi_KomutSatırıUygulaması.cs" />
+    <Compile Include="HazirKod_Cdiyez\DonanımHaberleşmesi_SeriPort.cs" />
+    <Compile Include="HazirKod_Cdiyez\DonanımHaberleşmesi_Tcp.cs" />
+    <Compile Include="HazirKod_Cdiyez\DonanımHaberleşmesi_Udp.cs" />
+    <Compile Include="HazirKod_Cdiyez\DoğrulamaKodu.cs" />
+    <Compile Include="HazirKod_Cdiyez\DurumBildirimi.cs" />
+    <Compile Include="HazirKod_Cdiyez\Dönüştürme.cs" />
+    <Compile Include="HazirKod_Cdiyez\Ekİşlemler.cs" />
+    <Compile Include="HazirKod_Cdiyez\Günlük.cs" />
+    <Compile Include="HazirKod_Cdiyez\Karmasiklastirma.cs" />
+    <Compile Include="HazirKod_Cdiyez\KayitDefteri.cs" />
+    <Compile Include="HazirKod_Cdiyez\KelimeTamamlayici.cs" />
+    <Compile Include="HazirKod_Cdiyez\Kendi.cs" />
+    <Compile Include="HazirKod_Cdiyez\KlasörDosya.cs" />
+    <Compile Include="HazirKod_Cdiyez\KlavyeFareGozlemcisi.cs" />
+    <Compile Include="HazirKod_Cdiyez\KodKümesi.cs" />
+    <Compile Include="HazirKod_Cdiyez\Liste.cs" />
+    <Compile Include="HazirKod_Cdiyez\Matematiksel.cs" />
+    <Compile Include="HazirKod_Cdiyez\MesajPanosu.cs" />
+    <Compile Include="HazirKod_Cdiyez\PencereVeTepsiIkonuKontrolu.cs" />
+    <Compile Include="HazirKod_Cdiyez\Sıkıştırma.cs" />
+    <Compile Include="HazirKod_Cdiyez\UygulamaBostaBekliyor.cs" />
+    <Compile Include="HazirKod_Cdiyez\UygulamalarArasiHaberlesme.cs" />
+    <Compile Include="HazirKod_Cdiyez\UygulamaOncedenCalistirildiMi.cs" />
+    <Compile Include="HazirKod_Cdiyez\Win32Kutuphaneleri.cs" />
+    <Compile Include="HazirKod_Cdiyez\YeniYazılımKontrolü.cs" />
+    <Compile Include="Ortak\Cihazlar.cs" />
+    <Compile Include="Ortak\Cihaz_Sonoff.cs" />
+    <Compile Include="Ortak\HttpSunucu.cs" />
+    <Compile Include="Ortak\Ortak.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AnaEkran.resx">
@@ -70,7 +111,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="HazirKod_Cdiyez\.git" />
+    <None Include="HazirKod_Cdiyez\LICENSE" />
+    <None Include="HazirKod_Cdiyez\README.md" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -83,6 +128,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mavi.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kırmızı.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cihazlarınız.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
